--- a/index.html
+++ b/index.html
@@ -457,7 +457,7 @@ document.write(`
 <p>Below are some key details about the module:</p>
 <div class="admonition-lecture-notes admonition">
 <p class="admonition-title">Lecture notes</p>
-<p>There are both online lecture notes and printed copies. These detail all the mathematical knowledge you need for this semester of MAS108. Please have a copy - either printed or online - with you when at the lectures as I will refer to them.</p>
+<p>There are both online lecture notes and printed copies. These detail all the mathematical knowledge you need for this semester of MAS108. Please have a copy - either printed or online - with you when at the lectures as I will refer to them. The original version of these notes were written by my colleague Jonathan Potts - many thanks to him for his hard work and sharing his resources with me.</p>
 </div>
 <div class="admonition-blackboard admonition">
 <p class="admonition-title">Blackboard</p>
