--- a/lecture12.html
+++ b/lecture12.html
@@ -491,7 +491,7 @@ m \ddot{x} &amp; =m g-T \\
 &amp; =-k x+k y, \tag{139}
 \end{align*}
 \end{split}\]</div>
-<img src="https://cdn.mathpix.com/cropped/2024_08_15_6ccf74bd3abd64ce60c8g-2.jpg?height=1009&width=1011&top_left_y=147&top_left_x=523" alt="drawing" width="200"/>
+<img src="mas108_forced_osc_both.png" alt="drawing" width="400"/>
 <p><em>Figure 19: Left-hand plot shows the situation when the system is in equilibrium. The righthand plot is when the system is in motion.</em></p>
 <p>where we have used Equation (137) in the last equality. Therefore</p>
 <div class="math notranslate nohighlight">
