--- a/lecture13.html
+++ b/lecture13.html
@@ -490,7 +490,7 @@ y(t)=a[2 \sin (\omega t)-\cos (\omega t)] . \tag{150}
 \Longrightarrow &amp; \ddot{x}+2 \omega^{2} x=0 \tag{152}
 \end{align*}
 \end{split}\]</div>
-<p><img alt="" src="https://cdn.mathpix.com/cropped/2024_08_15_d0ed8ca75c0c4bab91c2g-2.jpg?height=280&amp;width=809&amp;top_left_y=157&amp;top_left_x=629" /></p>
+<img src="mas108_stretched_spring.png" alt="drawing" width="400"/>
 <p>Figure 20: Forces acting on the string in Example 20a.</p>
 <p>By Proposition 6, the general solution to Equation (152) is</p>
 <div class="math notranslate nohighlight">
@@ -521,7 +521,7 @@ x(t)=a \cos (\sqrt{2} \omega t) \tag{156}
 \end{equation*}
 \]</div>
 <p>(b) In this case, the forces are shown in the diagram below</p>
-<p><img alt="" src="https://cdn.mathpix.com/cropped/2024_08_15_d0ed8ca75c0c4bab91c2g-2.jpg?height=392&amp;width=803&amp;top_left_y=1840&amp;top_left_x=632" /></p>
+<img src="mas108_stretched_damped.png" alt="drawing" width="400"/>
 <p>Using Newton’s second law, the equation of motion is</p>
 <div class="math notranslate nohighlight">
 \[\begin{split}
@@ -563,7 +563,7 @@ x(t)=a e^{-\omega t}[\cos (\omega t)+\sin (\omega t)] \tag{161}
 \[\begin{split}
 \begin{array}{r}
 \dot{x}\left(\frac{3 \pi}{4 \omega}\right)=a e^{-\frac{3 \pi}{4}}\left[-\omega \sin \left(\frac{3 \pi}{4}\right)+\omega \cos \left(\frac{3 \pi}{4}\right)\right] \\
-\quad=a e^{-\frac{3 \pi}{4}}\left[-\omega \frac{\sqrt{2}}{2}-\omega \frac{\sqrt{2}}{2}\right]=-a e^{-\frac{3 \pi}{4}} \omega \sqrt{2} \tag{162}
+\quad=a e^{-\frac{3 \pi}{4}}\left[-\omega \frac{\sqrt{2}}{2}-\omega \frac{\sqrt{2}}{2}\right]=-a e^{-\frac{3 \pi}{4}} \omega \sqrt{2}
 \end{array}
 \end{split}\]</div>
 <p>(If you didn’t know that <span class="math notranslate nohighlight">\(\sin (3 \pi / 4)=\sqrt{2} / 2\)</span> and <span class="math notranslate nohighlight">\(\cos (3 \pi / 4)=-\sqrt{2} / 2\)</span>, now is the time to make sure you do!) Therefore the speed of the particle is</p>
@@ -574,7 +574,7 @@ x(t)=a e^{-\omega t}[\cos (\omega t)+\sin (\omega t)] \tag{161}
 \end{equation*}
 \]</div>
 <p>(c) In this case, the force diagram is</p>
-<p><img alt="" src="https://cdn.mathpix.com/cropped/2024_08_15_d0ed8ca75c0c4bab91c2g-3.jpg?height=287&amp;width=1174&amp;top_left_y=2135&amp;top_left_x=458" /></p>
+<img src="mas108_stretched_spring_forced.png" alt="drawing" width="400"/>
 <p>The displacement of the particle from the fixed point <span class="math notranslate nohighlight">\(A\)</span> is now <span class="math notranslate nohighlight">\(x+a+y\)</span>. Therefore the velocity of the particle is <span class="math notranslate nohighlight">\(\dot{x}+\dot{y}\)</span> and the acceleration of the particle is <span class="math notranslate nohighlight">\(\ddot{x}+\ddot{y}\)</span>. Using Newton’s
 second law, the equation of motion is</p>
 <div class="math notranslate nohighlight">
