--- a/lecture16.html
+++ b/lecture16.html
@@ -455,7 +455,7 @@ document.write(`
 (b) Find the minimum distance between the boats when <span class="math notranslate nohighlight">\(u=7\)</span>.</p>
 <p><strong>Solution.</strong></p>
 <p>The most important thing to do at the start of any question on relative motion is to draw a sketch. This is given in Figure 23.</p>
-<img src="https://cdn.mathpix.com/cropped/2024_08_16_18238ff787b17a985cb6g-1.jpg?height=435&width=1015&top_left_y=1433&top_left_x=526" alt="drawing" width="400"/>
+<img src="mas108_relative_boat_motion.png" alt="drawing" width="400"/>
 <p><em>Figure 23: Relative motion of two boats.</em></p>
 <p>At time <span class="math notranslate nohighlight">\(t\)</span> hours, Boat 1 has velocity <span class="math notranslate nohighlight">\(\mathbf{v}_{1}=u \mathbf{i} \mathbf{k m h}^{-1}\)</span>. Since it starts at the origin, its location vector in kilometres is</p>
 <div class="math notranslate nohighlight">
@@ -538,7 +538,7 @@ d(t) &amp; =\sqrt{20\left(t^{2}-2 t+1+1\right)} \\
 <p>To a cyclist riding due East at <span class="math notranslate nohighlight">\(15 \mathrm{kmh}^{-1}\)</span> the wind appears to the cyclist to be blowing from the North-East at <span class="math notranslate nohighlight">\(12 \mathrm{kmh}^{-1}\)</span>. Find the true velocity of the wind.</p>
 <p><strong>Solution.</strong></p>
 <p>As always, we start by drawing a sketch of the situation, which is shown in Figure (24).</p>
-<img src="https://cdn.mathpix.com/cropped/2024_08_16_18238ff787b17a985cb6g-3.jpg?height=495&width=812&top_left_y=918&top_left_x=631" alt="drawing" width="400"/>
+<img src="mas108_cycle_wind.png" alt="drawing" width="400"/>
 <p><em>Figure 24: Cyclist in the wind.</em></p>
 <p>Denote the velocity of the cyclist by <span class="math notranslate nohighlight">\(\mathbf{v}_{C}\)</span> and the velocity of the wind by <span class="math notranslate nohighlight">\(\mathbf{v}_{W}\)</span>. Then <span class="math notranslate nohighlight">\(\mathbf{v}_{C}=15 \mathbf{i}\)</span> <span class="math notranslate nohighlight">\(\mathrm{kmh}^{-1}\)</span>. The unit vector in the North-East direction is <span class="math notranslate nohighlight">\(\frac{1}{\sqrt{2}}(\mathbf{i}+\mathbf{j})\)</span> so, since the speed of the wind relative to the cyclist is <span class="math notranslate nohighlight">\(12 \mathrm{~km}^{-1}\)</span>, the velocity of the wind relative to the cyclist is</p>
 <div class="math notranslate nohighlight">
@@ -574,17 +574,17 @@ d(t) &amp; =\sqrt{20\left(t^{2}-2 t+1+1\right)} \\
 &amp; \mathbf{r}_{2}=(60+u t) \mathbf{i}+40(t-4) \mathbf{j}+5(9 t+20) \mathbf{k}
 \end{aligned}
 \end{split}\]</div>
-<p>and <span class="math notranslate nohighlight">\(u\)</span> is a constant. Let <span class="math notranslate nohighlight">\(d\)</span> be the distance in metres between the aircraft.
-(a) Show that <span class="math notranslate nohighlight">\(d^{2}=2225(t-4)^{2}+[60-(50-u) t]^{2}\)</span>.
-(b) Show that if <span class="math notranslate nohighlight">\(u=35\)</span> then the aircraft are on a collision course.
-(c) Find the minimum value of <span class="math notranslate nohighlight">\(d\)</span> when <span class="math notranslate nohighlight">\(u=50\)</span>.</p>
+<p>and <span class="math notranslate nohighlight">\(u\)</span> is a constant. Let <span class="math notranslate nohighlight">\(d\)</span> be the distance in metres between the aircraft.</p>
+<p>(a) Show that <span class="math notranslate nohighlight">\(d^{2}=2225(t-4)^{2}+[60-(50-u) t]^{2}\)</span>.</p>
+<p>(b) Show that if <span class="math notranslate nohighlight">\(u=35\)</span> then the aircraft are on a collision course.</p>
+<p>(c) Find the minimum value of <span class="math notranslate nohighlight">\(d\)</span> when <span class="math notranslate nohighlight">\(u=50\)</span>.</p>
 </div>
 <div class="admonition-exercise-32 admonition">
 <p class="admonition-title">Exercise 32.</p>
-<p>An eagle is flying with velocity <span class="math notranslate nohighlight">\(2 \mathbf{j} \mathrm{ms}^{-1}\)</span> (where <span class="math notranslate nohighlight">\(\mathrm{ms}^{-1}\)</span> stands for ‘metres per second’). An owl is flying with velocity <span class="math notranslate nohighlight">\(u \mathbf{i}+v \mathbf{j} \mathrm{ms}^{-1}\)</span>.
-(a) Write down an expression for the velocity of the owl relative to the eagle.
-(b) To the eagle, the owl appears to have velocity in the direction <span class="math notranslate nohighlight">\(-\mathbf{i}\)</span>. Show that <span class="math notranslate nohighlight">\(u&lt;0\)</span> and <span class="math notranslate nohighlight">\(v=2\)</span>.
-(c) The eagle now increases its speed so that its velocity is now <span class="math notranslate nohighlight">\(4 \mathrm{j} \mathrm{ms}^{-1}\)</span>, but the owl does not change its velocity. It now appears to the eagle that the velocity of the owl is in the direction <span class="math notranslate nohighlight">\(-\mathbf{i}-\mathbf{j}\)</span>. Show that the speed of the owl is <span class="math notranslate nohighlight">\(2 \sqrt{2} \mathrm{~ms}^{-1}\)</span> and state its direction.</p>
+<p>An eagle is flying with velocity <span class="math notranslate nohighlight">\(2 \mathbf{j} \mathrm{ms}^{-1}\)</span> (where <span class="math notranslate nohighlight">\(\mathrm{ms}^{-1}\)</span> stands for ‘metres per second’). An owl is flying with velocity <span class="math notranslate nohighlight">\(u \mathbf{i}+v \mathbf{j} \mathrm{ms}^{-1}\)</span>.</p>
+<p>(a) Write down an expression for the velocity of the owl relative to the eagle.</p>
+<p>(b) To the eagle, the owl appears to have velocity in the direction <span class="math notranslate nohighlight">\(-\mathbf{i}\)</span>. Show that <span class="math notranslate nohighlight">\(u&lt;0\)</span> and <span class="math notranslate nohighlight">\(v=2\)</span>.</p>
+<p>(c) The eagle now increases its speed so that its velocity is now <span class="math notranslate nohighlight">\(4 \mathrm{j} \mathrm{ms}^{-1}\)</span>, but the owl does not change its velocity. It now appears to the eagle that the velocity of the owl is in the direction <span class="math notranslate nohighlight">\(-\mathbf{i}-\mathbf{j}\)</span>. Show that the speed of the owl is <span class="math notranslate nohighlight">\(2 \sqrt{2} \mathrm{~ms}^{-1}\)</span> and state its direction.</p>
 </div>
 </section>
 </section>
