--- a/lecture18.html
+++ b/lecture18.html
@@ -464,8 +464,8 @@ document.write(`
 \end{equation*}
 \]</div>
 <p>Suppose that the projectile is released at an angle of <span class="math notranslate nohighlight">\(\theta\)</span> to the horizontal. Then <span class="math notranslate nohighlight">\(x_{0}=V \cos (\theta)\)</span> and <span class="math notranslate nohighlight">\(z_{0}=V \sin (\theta)\)</span> where <span class="math notranslate nohighlight">\(V\)</span> is the initial speed of the projectile (Figure 27).</p>
-<p><img alt="" src="https://cdn.mathpix.com/cropped/2024_08_16_ea3ba10b38520fd3752bg-1.jpg?height=497&amp;width=809&amp;top_left_y=1579&amp;top_left_x=635" />
-Figure 27: A projectile released at an angle <span class="math notranslate nohighlight">\(\theta\)</span> from the horizontal.</p>
+<img src="mas108_projectile1.png" alt="drawing" width="400"/>
+<p>Figure 27: A projectile released at an angle <span class="math notranslate nohighlight">\(\theta\)</span> from the horizontal.</p>
 <p>Now, since the acceleration due to gravity is in the negative <span class="math notranslate nohighlight">\(\mathbf{k}\)</span>-direction, we have <span class="math notranslate nohighlight">\(\mathbf{a}=-g \mathbf{k}\)</span>, where <span class="math notranslate nohighlight">\(g\)</span> is the gravitational constant. We can now put these expressions for <span class="math notranslate nohighlight">\(\mathbf{u}\)</span> and <span class="math notranslate nohighlight">\(\mathbf{a}\)</span> into Equation (211) (which says <span class="math notranslate nohighlight">\(\mathbf{v}(t)=\mathbf{a} t+\mathbf{u}\)</span> ). This gives</p>
 <div class="math notranslate nohighlight">
 \[
@@ -530,7 +530,7 @@ z &amp; =\frac{V x \sin (\theta)}{V \cos (\theta)}-\frac{g x^{2}}{2 V^{2} \cos ^
 <p class="admonition-title"><span class="caption-number">Example 28 </span></p>
 <section class="example-content" id="proof-content">
 <p>A person hits a ball with a bat at a height of 1 meter above the ground. The ball’s initial speed is <span class="math notranslate nohighlight">\(25 \mathrm{~ms}^{-1}\)</span> at an angle of <span class="math notranslate nohighlight">\(\frac{\pi}{6}\)</span> radians above the horizontal. Find the horizontal distance from the person to the place where the ball first bounces, assuming <span class="math notranslate nohighlight">\(g=9.8\)</span>.</p>
-<img src="https://cdn.mathpix.com/cropped/2024_08_16_ea3ba10b38520fd3752bg-3.jpg?height=569&width=906&top_left_y=144&top_left_x=586" alt="drawing" width="400"/>
+<img src="mas108_projectile_ex.png" alt="drawing" width="400"/>
 <p><em>Figure 28: The trajectory of a ball.</em></p>
 <p><strong>Solution.</strong></p>
 <p>As usual, we start with a sketch (Figure 28) Let the vertical height of the ball be <span class="math notranslate nohighlight">\(z \mathrm{~m}\)</span> above the point of projection and let the ball be <span class="math notranslate nohighlight">\(x \mathrm{~m}\)</span> horizontally from the person. Then</p>
