--- a/lecture19.html
+++ b/lecture19.html
@@ -455,7 +455,7 @@ document.write(`
 (b) returns to the student’s hand.</p>
 <p><strong>Solution.</strong></p>
 <p>As always, we start with a sketch (Figure 29).</p>
-<img src="https://cdn.mathpix.com/cropped/2024_08_16_095b133f647f5daf1c3ag-1.jpg?height=283&width=1079&top_left_y=841&top_left_x=494" alt="drawing" width="400"/>
+<img src="mas108_student_in_lift.png" alt="drawing" width="400"/>
 <p><em>Figure 29: Student in a lift.</em></p>
 <p>(a) At time <span class="math notranslate nohighlight">\(t\)</span>, let the velocity of the ball be <span class="math notranslate nohighlight">\(\mathbf{v}_{B}(t)=W(t) \mathbf{k}\)</span>, where <span class="math notranslate nohighlight">\(W(t)\)</span> is a scalar function. At time <span class="math notranslate nohighlight">\(t=0\)</span>,</p>
 <div class="math notranslate nohighlight">
